--- a/index.html
+++ b/index.html
@@ -56,6 +56,357 @@
             <button >Ir a WhatsApp</button>
           </div>
         </div>
+        <div class="container">
+          <div class="product">
+            <img src="assets/photos/photo.jpeg" alt="Ref 000">
+            <div class="product-info">
+              <h3>BLUSA DE DAMA</h3>
+              <p>Ref 000</p>
+              <p>Precio $00.000</p>
+              <button >Ir a WhatsApp</button>
+            </div>
+          </div>
+          <div class="container">
+            <div class="product">
+              <img src="assets/photos/photo.jpeg" alt="Ref 000">
+              <div class="product-info">
+                <h3>BLUSA DE DAMA</h3>
+                <p>Ref 000</p>
+                <p>Precio $00.000</p>
+                <button >Ir a WhatsApp</button>
+              </div>
+            </div>
+            <div class="container">
+              <div class="product">
+                <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                <div class="product-info">
+                  <h3>BLUSA DE DAMA</h3>
+                  <p>Ref 000</p>
+                  <p>Precio $00.000</p>
+                  <button >Ir a WhatsApp</button>
+                </div>
+              </div>
+              <div class="container">
+                <div class="product">
+                  <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                  <div class="product-info">
+                    <h3>BLUSA DE DAMA</h3>
+                    <p>Ref 000</p>
+                    <p>Precio $00.000</p>
+                    <button >Ir a WhatsApp</button>
+                  </div>
+                </div>
+                <div class="container">
+                  <div class="product">
+                    <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                    <div class="product-info">
+                      <h3>BLUSA DE DAMA</h3>
+                      <p>Ref 000</p>
+                      <p>Precio $00.000</p>
+                      <button >Ir a WhatsApp</button>
+                    </div>
+                  </div>
+                  <div class="container">
+                    <div class="product">
+                      <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                      <div class="product-info">
+                        <h3>BLUSA DE DAMA</h3>
+                        <p>Ref 000</p>
+                        <p>Precio $00.000</p>
+                        <button >Ir a WhatsApp</button>
+                      </div>
+                    </div>
+                    <div class="container">
+                      <div class="product">
+                        <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                        <div class="product-info">
+                          <h3>BLUSA DE DAMA</h3>
+                          <p>Ref 000</p>
+                          <p>Precio $00.000</p>
+                          <button >Ir a WhatsApp</button>
+                        </div>
+                      </div>
+                      <div class="container">
+                        <div class="product">
+                          <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                          <div class="product-info">
+                            <h3>BLUSA DE DAMA</h3>
+                            <p>Ref 000</p>
+                            <p>Precio $00.000</p>
+                            <button >Ir a WhatsApp</button>
+                          </div>
+                        </div>
+                        <div class="container">
+                          <div class="product">
+                            <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                            <div class="product-info">
+                              <h3>BLUSA DE DAMA</h3>
+                              <p>Ref 000</p>
+                              <p>Precio $00.000</p>
+                              <button >Ir a WhatsApp</button>
+                            </div>
+                          </div>
+                          <div class="container">
+                            <div class="product">
+                              <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                              <div class="product-info">
+                                <h3>BLUSA DE DAMA</h3>
+                                <p>Ref 000</p>
+                                <p>Precio $00.000</p>
+                                <button >Ir a WhatsApp</button>
+                              </div>
+                            </div>
+                            <div class="container">
+                              <div class="product">
+                                <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                <div class="product-info">
+                                  <h3>BLUSA DE DAMA</h3>
+                                  <p>Ref 000</p>
+                                  <p>Precio $00.000</p>
+                                  <button >Ir a WhatsApp</button>
+                                </div>
+                              </div>
+                              <div class="container">
+                                <div class="product">
+                                  <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                  <div class="product-info">
+                                    <h3>BLUSA DE DAMA</h3>
+                                    <p>Ref 000</p>
+                                    <p>Precio $00.000</p>
+                                    <button >Ir a WhatsApp</button>
+                                  </div>
+                                </div>
+                                <div class="container">
+                                  <div class="product">
+                                    <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                    <div class="product-info">
+                                      <h3>BLUSA DE DAMA</h3>
+                                      <p>Ref 000</p>
+                                      <p>Precio $00.000</p>
+                                      <button >Ir a WhatsApp</button>
+                                    </div>
+                                  </div>
+                                  <div class="container">
+                                    <div class="product">
+                                      <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                      <div class="product-info">
+                                        <h3>BLUSA DE DAMA</h3>
+                                        <p>Ref 000</p>
+                                        <p>Precio $00.000</p>
+                                        <button >Ir a WhatsApp</button>
+                                      </div>
+                                    </div>
+                                    <div class="container">
+                                      <div class="product">
+                                        <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                        <div class="product-info">
+                                          <h3>BLUSA DE DAMA</h3>
+                                          <p>Ref 000</p>
+                                          <p>Precio $00.000</p>
+                                          <button >Ir a WhatsApp</button>
+                                        </div>
+                                      </div>
+                                      <div class="container">
+                                        <div class="product">
+                                          <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                          <div class="product-info">
+                                            <h3>BLUSA DE DAMA</h3>
+                                            <p>Ref 000</p>
+                                            <p>Precio $00.000</p>
+                                            <button >Ir a WhatsApp</button>
+                                          </div>
+                                        </div>
+                                        <div class="container">
+                                          <div class="product">
+                                            <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                            <div class="product-info">
+                                              <h3>BLUSA DE DAMA</h3>
+                                              <p>Ref 000</p>
+                                              <p>Precio $00.000</p>
+                                              <button >Ir a WhatsApp</button>
+                                            </div>
+                                          </div>
+                                          <div class="container">
+                                            <div class="product">
+                                              <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                              <div class="product-info">
+                                                <h3>BLUSA DE DAMA</h3>
+                                                <p>Ref 000</p>
+                                                <p>Precio $00.000</p>
+                                                <button >Ir a WhatsApp</button>
+                                              </div>
+                                            </div>
+                                            <div class="container">
+                                              <div class="product">
+                                                <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                                <div class="product-info">
+                                                  <h3>BLUSA DE DAMA</h3>
+                                                  <p>Ref 000</p>
+                                                  <p>Precio $00.000</p>
+                                                  <button >Ir a WhatsApp</button>
+                                                </div>
+                                              </div>
+                                              <div class="container">
+                                                <div class="product">
+                                                  <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                                  <div class="product-info">
+                                                    <h3>BLUSA DE DAMA</h3>
+                                                    <p>Ref 000</p>
+                                                    <p>Precio $00.000</p>
+                                                    <button >Ir a WhatsApp</button>
+                                                  </div>
+                                                </div>
+                                                <div class="container">
+                                                  <div class="product">
+                                                    <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                                    <div class="product-info">
+                                                      <h3>BLUSA DE DAMA</h3>
+                                                      <p>Ref 000</p>
+                                                      <p>Precio $00.000</p>
+                                                      <button >Ir a WhatsApp</button>
+                                                    </div>
+                                                  </div>
+                                                  <div class="container">
+                                                    <div class="product">
+                                                      <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                                      <div class="product-info">
+                                                        <h3>BLUSA DE DAMA</h3>
+                                                        <p>Ref 000</p>
+                                                        <p>Precio $00.000</p>
+                                                        <button >Ir a WhatsApp</button>
+                                                      </div>
+                                                    </div>
+      <div class="container">
+        <div class="product">
+          <img src="assets/photos/photo.jpeg" alt="Ref 000">
+          <div class="product-info">
+            <h3>BLUSA DE DAMA</h3>
+            <p>Ref 000</p>
+            <p>Precio $00.000</p>
+            <button >Ir a WhatsApp</button>
+          </div>
+        </div>
+        <div class="container">
+          <div class="product">
+            <img src="assets/photos/photo.jpeg" alt="Ref 000">
+            <div class="product-info">
+              <h3>BLUSA DE DAMA</h3>
+              <p>Ref 000</p>
+              <p>Precio $00.000</p>
+              <button >Ir a WhatsApp</button>
+            </div>
+          </div>
+          <div class="container">
+            <div class="product">
+              <img src="assets/photos/photo.jpeg" alt="Ref 000">
+              <div class="product-info">
+                <h3>BLUSA DE DAMA</h3>
+                <p>Ref 000</p>
+                <p>Precio $00.000</p>
+                <button >Ir a WhatsApp</button>
+              </div>
+            </div>
+      <div class="container">
+        <div class="product">
+          <img src="assets/photos/photo.jpeg" alt="Ref 000">
+          <div class="product-info">
+            <h3>BLUSA DE DAMA</h3>
+            <p>Ref 000</p>
+            <p>Precio $00.000</p>
+            <button >Ir a WhatsApp</button>
+          </div>
+        </div>
+        <div class="container">
+          <div class="product">
+            <img src="assets/photos/photo.jpeg" alt="Ref 000">
+            <div class="product-info">
+              <h3>BLUSA DE DAMA</h3>
+              <p>Ref 000</p>
+              <p>Precio $00.000</p>
+              <button >Ir a WhatsApp</button>
+            </div>
+          </div>
+          <div class="container">
+            <div class="product">
+              <img src="assets/photos/photo.jpeg" alt="Ref 000">
+              <div class="product-info">
+                <h3>BLUSA DE DAMA</h3>
+                <p>Ref 000</p>
+                <p>Precio $00.000</p>
+                <button >Ir a WhatsApp</button>
+              </div>
+            </div>
+            <div class="container">
+              <div class="product">
+                <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                <div class="product-info">
+                  <h3>BLUSA DE DAMA</h3>
+                  <p>Ref 000</p>
+                  <p>Precio $00.000</p>
+                  <button >Ir a WhatsApp</button>
+                </div>
+              </div>
+              <div class="container">
+                <div class="product">
+                  <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                  <div class="product-info">
+                    <h3>BLUSA DE DAMA</h3>
+                    <p>Ref 000</p>
+                    <p>Precio $00.000</p>
+                    <button >Ir a WhatsApp</button>
+                  </div>
+                </div>
+                <div class="container">
+                  <div class="product">
+                    <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                    <div class="product-info">
+                      <h3>BLUSA DE DAMA</h3>
+                      <p>Ref 000</p>
+                      <p>Precio $00.000</p>
+                      <button >Ir a WhatsApp</button>
+                    </div>
+                  </div>
+      <div class="container">
+        <div class="product">
+          <img src="assets/photos/photo.jpeg" alt="Ref 000">
+          <div class="product-info">
+            <h3>BLUSA DE DAMA</h3>
+            <p>Ref 000</p>
+            <p>Precio $00.000</p>
+            <button >Ir a WhatsApp</button>
+          </div>
+        </div>
+        <div class="container">
+          <div class="product">
+            <img src="assets/photos/photo.jpeg" alt="Ref 000">
+            <div class="product-info">
+              <h3>BLUSA DE DAMA</h3>
+              <p>Ref 000</p>
+              <p>Precio $00.000</p>
+              <button >Ir a WhatsApp</button>
+            </div>
+          </div>
+          <div class="container">
+            <div class="product">
+              <img src="assets/photos/photo.jpeg" alt="Ref 000">
+              <div class="product-info">
+                <h3>BLUSA DE DAMA</h3>
+                <p>Ref 000</p>
+                <p>Precio $00.000</p>
+                <button >Ir a WhatsApp</button>
+              </div>
+            </div>
+            <div class="container">
+              <div class="product">
+                <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                <div class="product-info">
+                  <h3>BLUSA DE DAMA</h3>
+                  <p>Ref 000</p>
+                  <p>Precio $00.000</p>
+                  <button >Ir a WhatsApp</button>
+                </div>
+              </div>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
     </main>
     <footer class="footer">
       <div class="footer__top"></div>
