--- a/index.html
+++ b/index.html
@@ -40,206 +40,18 @@
     </header>
     <main class="main">
 
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
+        <div class="main__product-container">
+            <div class="product">
+                <img src="assets/photos/photo.jpeg" alt="REF 000" class="product__photo">
+                <div class="product__information">
+                    <p class="product__name">BLUSA DE DAMA</p>
+                    <p class="product__reference">REF 000</p>
+                    <p class="product__price">PRECIO $00.000</p>
+                </div>
+                <a class="product__button">Agregar al Carrito</a>
             </div>
         </div>
 
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="assets/photos/photo.jpeg" alt="Producto">
-            <div class="product-details">
-                <h2>BLUSA DE DAMA</h2>
-                <p>REF: 000</p>
-                <p class="price">PRECIO: $00.000</p>
-                <button class="buy-button">Comprar ahora</button>
-            </div>
-        </div>
     </main>
     <footer class="footer">
         <div class="footer__top"></div>
