--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="header__nav">
             <div class="header__nav-left">
                 <img src="assets/images/logo.ico" alt="Rosa Linda" class="header__logo">
-                <h1 class="header__name">Rosa Linda</h1>
+                <h1 class="header__name">Tienda Rosa Linda</h1>
             </div>
         </nav>
     </header>
